Using sendBroadcast instead of startActivity to send sms info to the plugin

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="org.kde.kdeconnect.ktp.permission" />
 
     <application
         android:allowBackup="true"
@@ -43,7 +45,6 @@
             android:theme="@style/Theme.AppCompat"
             android:name="org.kde.kdeconnect.UserInterface.MainActivity"
             android:label="KDE Connect" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
