--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'org.apache.mina:mina-core:2.0.9'
     compile 'org.apache.sshd:sshd-core:0.8.0'
-    compile 'org.bouncycastle:bcprov-jdk16:1.46'
-
+    //compile 'org.bouncycastle:bcprov-jdk16:1.46'
     //compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'org.bouncycastle:bcpkix-jdk15on:1.52'
 }
